--- a/index.html
+++ b/index.html
@@ -165,91 +165,109 @@
 
 						<div class="row gtr-150 hide_content">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_1.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_23.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_2.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_24.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_3.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_25.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_18.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_1.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_19.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_2.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_20.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_3.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_21.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_18.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_22.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_19.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_5.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_20.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_15.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_21.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_16.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_22.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_17.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_5.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_11.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_15.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_7.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_16.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_8.jpg" alt="" /></span>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_17.jpg" loading="lazy" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_11.jpg" loading="lazy" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_7.jpg" loading="lazy" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_8.jpg" loading="lazy" alt="" /></span>
 							<h3></h3>
 							<p></p>
 						</div>
@@ -267,9 +285,9 @@
 							<button class="show_more">Показать еще</button>
 						</div>
 
-						<div class="col-12 col-12-medium">
+						<!-- <div class="col-12 col-12-medium">
 							<iframe class="main_video_1" width="100%" src="https://www.youtube.com/embed/kVc3WaVz54Q?rel=0&color=white&volume=0&vol=0&mute=1&showinfo=1&autoplay=1&playsinline=1" title="Мое служение людям" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div>
+						</div> -->
 
 					</div>
 				</div>
